# mmv2

./: .gitignore  compose.yaml
backend/: .dockerignore  .gitignore  AGENTS.md  LICENSE  README.md  compose.yaml  dockerfile.celery  dockerfile.www  makefile  pyproject.toml
backend/backend/: celery.py  www.py
backend/backend/conf/: db.py  settings.py
backend/backend/endpoints/: meetup.py
backend/backend/models/: base.py  meetup.py  poi.py
backend/backend/repositories/: meetup.py
backend/backend/schemas/: meetup.py  poi.py
backend/backend/services/: db.py
backend/backend/utils/: enums.py  geo.py
backend/db/: env.py  init.sql
backend/db/versions/: 5e8c8415bfa0_tablones.py  b8f2dc47f913_add_meetup_fields.py  f229a645886b_tablones.py
backend/docker/www/: prestart.sh
backend/docs/dev/: README.md  api.md  celery.md  database.md  docker.md  documentation.md  makefile.md  pypi.md  settings.md  testing.md
backend/tests/: conftest.py  test_celery.py  test_settings.py  test_www.py
frontend/: .gitignore  Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.routes.ts  app.spec.ts  app.ts
frontend/src/app/create-meetup/: create-meetup.html  create-meetup.spec.ts  create-meetup.ts
frontend/src/app/landing/: landing.component.html  landing.html  landing.spec.ts  landing.ts
frontend/src/app/map-test/: map-test.spec.ts  map-test.ts
frontend/src/environments/: environment.prod.ts  environment.ts
infra/data/poi/: categorize.py
infra/scripts/: download.sh  init_pois.py  map_pois.py  parse_google.py  parse_osm.py  prepare-valhalla.sh
infra/traefik/: traefik.yaml
infra/valhalla/: valhalla.json
(+20 files in other folders)
